profile page ready

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,7 +20,7 @@
             <div class="section-container">
                 <div class="section">
                     <div class="field">
-                        <label htmlFor="">username:</label>
+                        <h4>username:</h4>
                     </div>
         
                     <div class="field">
@@ -30,7 +30,7 @@
         
                 <div class="section">
                     <div class="field">
-                        <label htmlFor="">height (cm):</label>
+                        <h4>height (cm):</h4>
                     </div>
         
                     <div class="field">
@@ -40,7 +40,7 @@
         
                 <div class="section">
                     <div class="field">
-                        <label htmlFor="">weight (kg):</label>
+                        <h4>weight (kg):</h4>
                     </div>
         
                     <div class="field">
@@ -50,7 +50,7 @@
         
                 <div class="section">
                     <div class="field">
-                        <label htmlFor="">BMI:</label>
+                        <h4>BMI:</h4>
                     </div>
         
                     <div class="field">
@@ -60,7 +60,7 @@
         
                 <div class="section">
                     <div class="field">
-                        <label htmlFor="">current workout:</label>
+                        <h4>current workout:</h4>
                     </div>
         
                     <div class="field">
@@ -77,16 +77,11 @@
                         <button>nutrition menu</button>
                     </div>
                 </div>
-
-                <div class="section" id="back">
-                    <button onclick="window.location.href = '/'">BACK</button>
-                </div>
             </div>
+            
+            <a href="/">back</a>
         </div>
-    </div>
 
-    <script>
-        console.log("<%= user %>");
-    </script>
+    </div>
 </body>
 </html>
