--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -21,7 +21,7 @@
 
 .profile .profile-card .section-container {
     width: 75%;
-    margin: 0 auto;
+    margin: 0 auto 3rem auto;
     padding: 1rem;
     border: .3rem solid #236ca3;
     background-color: rgba(0, 0, 0, 0.363);
@@ -41,11 +41,16 @@
 
 .profile .profile-card .section .field input {
     padding: 0 3rem 0 1rem;
-    font-size: 16px;
+    font-size: 1rem;
     color: whitesmoke;
     background: none;
     border: none;
     outline: none;
+}
+
+.profile .profile-card .section .field h4 {
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 .profile .profile-card .section#button-section .field {
@@ -61,13 +66,11 @@
     background-color: #135690;
 }
 
-.profile .profile-card .section#back button {
-    width: 100%;
-    height: 2.5rem;
-    margin: 1rem auto;
-    font-weight: 600;
+.profile .profile-card a {
     color: #236ca3;
-    background-color: rgba(248, 246, 246, 0.863);
+    font-size: 1rem;
+    font-weight: 400;
+    text-decoration: underline;
 }
 
 .profile .profile-card .section#back button:hover {
