--- a/views/nutrition.ejs
+++ b/views/nutrition.ejs
@@ -16,8 +16,8 @@
         <div class="title">
             <h2><%= menu.title %></h2>
             
-            <button>ימי מנוחה</button>
-            <button>ימי אימון</button>
+            <button id="restButton">ימי מנוחה</button>
+            <button id="workButton">ימי אימון</button>
         </div>
 
         <div class="meal">
@@ -26,39 +26,19 @@
             <div class="container">
                 <h3>ארוחה 1</h3>
 
-                <p>food</p>
-                <p>food</p>
-                <p>food</p>
-                <p>food</p>
+                <p dir="rtl"><%= menu.work[0] %></p>
             </div>
 
             <img src="/img/arrow_right.png" id="right-arrow">
         </div>
+
+        <a href="/profile">back</a>
     </div>
 
 
     <script>
-        let menus = "<%= menu %>";
-        
-        console.log(menus);
-
-        let workMenu = [
-            menus.work[0],
-            menus.work[1],
-            menus.work[2],
-            menus.work[3],
-            menus.work[4],
-            menus.work[5]
-        ];
-
-        let restMenu = [
-            menus.rest[0],
-            menus.rest[1],
-            menus.rest[2],
-            menus.rest[3],
-            menus.rest[4],
-            menus.rest[5]
-        ];
+        let workMenu = `<%= menu.work %>`.split(",");
+        let restMenu = "<%= menu.rest %>".split(",");
     </script>
 
     <script src="/scripts/nutrition.js"></script>
