--- a/views/workouts/ab.ejs
+++ b/views/workouts/ab.ejs
@@ -49,9 +49,11 @@
             <form id="feedback" action="/workouts" method="POST" style="display: none">
                 <h2>דרג את קושי האימון</h2>
             
-                <button type="submit" name="-2">קשה מדי</button>
-                <button type="submit" name="0">מעולה</button>
-                <button type="submit" name="2">קל מידי</button>
+                <button name="-2">קשה מדי</button>
+                <button name="0">מעולה</button>
+                <button name="2">קל מידי</button>
+
+                <input type="text" placeholder="Leave a comment...">
             </form>
         </div>
     </div>
