--- a/public/styles/workout.css
+++ b/public/styles/workout.css
@@ -67,22 +67,39 @@ form h2 {
     margin-bottom: 2vh;
 }
 
-#feedback button {
-    width: 30%;
-    height: 3.5vh;
-    cursor: pointer;
-    border: none;
-    color: white;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.315);
-    font-size: 14px;
-    background-color: #003F75;
+#feedback .diffBtns div {
+    display: inline-block;
+    padding: 0 1rem;
 }
 
-#done button {
-    width: 35%;
-    height: 6.5vh;
+#feedback .diffBtns div input {
+    padding: 5px 0;
+    border: none;
+    color: white;
+}
+
+#feedback input[type="text"] {
+    width: 80%;
+    padding: .3rem;
+    margin: 1rem 0 .4rem 0;
+    color: white;
+    border: 2px solid #003F75;
+    border-radius: 3px;
+    outline: none;
+    background-color: #003e75a4;
+}
+
+#feedback input::placeholder {
+    color: whitesmoke;
+    opacity: .7;
+}
+
+#feedback #returnBtn {
+    width: 80%;
+    padding: .3rem 0;
     cursor: pointer;
     border: none;
+    border-radius: 3px;
     color: white;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.315);
     font-size: 16px;
