--- a/public/styles/workout.css
+++ b/public/styles/workout.css
@@ -106,6 +106,15 @@ form h2 {
     background-color: #003F75;
 }
 
+#done button {
+    width: 35%;
+    padding: .4rem 0;
+    font-size: 1rem;
+    font-weight: 500;
+    color: whitesmoke;
+    background-color: #003F75;
+}
+
 .view {
     width: 60%;
 }
