display trainer message input

--- a/public/styles/workout.css
+++ b/public/styles/workout.css
@@ -82,7 +82,7 @@ form h2 {
     width: 80%;
     padding: .3rem;
     margin: 1rem 0 .4rem 0;
-    color: white;
+    color: whitesmoke;
     border: 2px solid #003F75;
     border-radius: 3px;
     outline: none;
