--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -77,6 +77,16 @@
                         <button onclick="window.location.href = '/profile/nutrition'">nutrition menu</button>
                     </div>
                 </div>
+
+                <div class="section" id="contact-trainer">
+                    <h3>Contact one of our trainers</h3>
+                </div>
+
+                <form class="section">
+
+                    <input type="text" placeholder="Send message to trainer...">
+                    <button type="submit">send message</button>
+                </form>
             </div>
             
             <a href="/">back</a>
