--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -3,10 +3,10 @@
 }
 
 .profile .profile-card {
-    width: 65%;
+    width: 70%;
     display: inline-block;
     margin: 2rem 0;
-    padding: 2rem 3.5rem;
+    padding: 2rem 30rem;
     text-align: center;
     box-shadow: 1px 1px 10px #000000;
     color: whitesmoke;
@@ -75,4 +75,26 @@
 
 .profile .profile-card .section#back button:hover {
     background-color: rgba(248, 246, 246, 0.671) !important;
+}
+
+.profile .profile-card #contact-trainer {
+    justify-content: center;
+    align-items: center;
+}
+
+.profile .profile-card #contact-trainer h3 {
+    font-weight: 500;
+    padding-bottom: 1rem;
+}
+
+.profile .profile-card form.section input {
+    width: 70%;
+    color: rgb(51, 51, 51);
+    border: 1px solid #003F75;
+    padding: 2px 5px;
+    outline: none;
+}
+
+.profile .profile-card form.section button {
+    width: 30%;
 }
