--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -83,15 +83,19 @@
                 </div>
 
                 <form class="section">
-
                     <input type="text" placeholder="Send message to trainer...">
-                    <button type="submit">send message</button>
+                    <button type="reset">send</button>
                 </form>
+
+                <div class="section" id="message-confirmation">
+                    <p>message sent×</p>
+                </div>
             </div>
             
             <a href="/">back</a>
         </div>
-
     </div>
+
+    <script src="/scripts/message_trainer.js"></script>
 </body>
 </html>
