--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -3,10 +3,10 @@
 }
 
 .profile .profile-card {
-    width: 70%;
+    width: 65%;
     display: inline-block;
     margin: 2rem 0;
-    padding: 2rem 30rem;
+    padding: 2rem 1rem;
     text-align: center;
     box-shadow: 1px 1px 10px #000000;
     color: whitesmoke;
@@ -83,18 +83,39 @@
 }
 
 .profile .profile-card #contact-trainer h3 {
+    color: whitesmoke;
+    font-size: 1.3rem;
     font-weight: 500;
-    padding-bottom: 1rem;
+    padding: 1rem;
+}
+
+.profile .profile-card form.section {
+    justify-content: center;
 }
 
 .profile .profile-card form.section input {
-    width: 70%;
+    width: 60%;
     color: rgb(51, 51, 51);
     border: 1px solid #003F75;
-    padding: 2px 5px;
+    padding: 0px 5px;
     outline: none;
 }
 
 .profile .profile-card form.section button {
-    width: 30%;
+    width: 20%;
+}
+
+.profile .profile-card .section#message-confirmation {
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile .profile-card .section#message-confirmation p {
+    padding: 1rem;
+    cursor: pointer;
+    color: #003F75;
+    font-size: .8rem;
+    font-weight: 300;
+    text-decoration: underline;
 }
