--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -83,8 +83,8 @@
                 </div>
 
                 <form class="section">
-                    <input type="text" placeholder="Send message to trainer...">
-                    <button type="reset">send</button>
+                    <input type="text" placeholder="Send message to trainer..." required />
+                    <button type="submit">send</button>
                 </form>
 
                 <div class="section" id="message-confirmation">
