--- a/views/workouts/aerobic.ejs
+++ b/views/workouts/aerobic.ejs
@@ -15,7 +15,7 @@
 
     <div class="container">
         <div class="title">
-            <h1>אימון אירובי</h1>
+            <h1>Aerobic workout</h1>
         </div>
 
         <div class="workout">
