--- a/views/workouts/aerobic_ab.ejs
+++ b/views/workouts/aerobic_ab.ejs
@@ -15,7 +15,7 @@
 
     <div class="container">
         <div class="title">
-            <h1>AB + אימון אירובי</h1>
+            <h1>AB + Aerobic workout</h1>
         </div>
 
         <div class="workout">
