--- a/views/workouts/aerobic_ab_switch.ejs
+++ b/views/workouts/aerobic_ab_switch.ejs
@@ -15,7 +15,7 @@
 
     <div class="container">
         <div class="title">
-            <h1>(עם חילוף) B + אירובי + A אימון</h1>
+            <h1>AB + Aerobic workout (switch)</h1>
         </div>
 
         <div class="workout">
