--- a/views/workouts/fbw.ejs
+++ b/views/workouts/fbw.ejs
@@ -15,7 +15,7 @@
 
     <div class="container">
         <div class="title">
-            <h1>אימון פול בודי</h1>
+            <h1>Full body workout</h1>
         </div>
 
         <div class="workout">
