--- a/views/workouts/ab.ejs
+++ b/views/workouts/ab.ejs
@@ -15,7 +15,7 @@
 
     <div class="container">
         <div class="title">
-            <h1>AB אימון</h1>
+            <h1>AB workout</h1>
         </div>
 
         <div class="workout">
