--- a/views/workouts/abc.ejs
+++ b/views/workouts/abc.ejs
@@ -15,7 +15,7 @@
 
     <div class="container">
         <div class="title">
-            <h1>ABC אימון</h1>
+            <h1>ABC workout</h1>
         </div>
 
         <div class="workout">
