--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,7 +13,7 @@
             <a href="/login">login</a>
             <a href="/register">register</a>
         <% } else { %>
-            <a href="/profile">profile</a>
+            <a href="/">profile</a>
             <a href="/logout">logout</a>
         <% } %> 
     </div>
@@ -27,13 +27,23 @@
 
 <div class="mobile-nav">
     <div class="links">
-        <div class="login">
-            <a href="/login">login</a>
-        </div>
-
-        <div class="register">
-            <a href="/register">register</a>
-        </div>
+        <% if (!user) { %>
+            <div class="login">
+                <a href="/login">login</a>
+            </div>
+    
+            <div class="register">
+                <a href="/register">register</a>
+            </div>
+        <% } else { %>
+            <div class="profile">
+                <a href="/">profile</a>
+            </div>
+    
+            <div class="logout">
+                <a href="/logout">logout</a>
+            </div>
+        <% } %>
     </div>
 </div>
 
