--- a/public/styles/nutrition.css
+++ b/public/styles/nutrition.css
@@ -35,7 +35,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 3.5rem 1.5rem 0 1.5rem;
+    padding-top: 3.5rem;
     margin-bottom: 15vh;
     color: rgb(224, 224, 224);
 }
@@ -60,4 +60,14 @@
     font-size: .9rem;
     font-weight: 400;
     text-decoration: underline;
+}
+
+@media (max-width: 630px) {
+    .menu {
+        width: 70%;
+    }
+
+    .menu .meal img {
+        width: 1rem;
+    }
 }
