--- a/views/nutrition.ejs
+++ b/views/nutrition.ejs
@@ -32,7 +32,7 @@
             <img src="/img/arrow_right.png" id="right-arrow">
         </div>
 
-        <a href="/profile">back</a>
+        <a href="/">back</a>
     </div>
 
 
