IOS input fix???

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -23,7 +23,7 @@
                     </div>
         
                     <div class="field">
-                        <input type="text" value="<%= user.username %>" id="valid" disabled />
+                        <h4><%= user.username %></h4>
                     </div>
                 </div>
         
@@ -33,7 +33,7 @@
                     </div>
         
                     <div class="field">
-                        <input type="number" value="<%= user.height %>" id="valid" disabled />
+                        <h4><%= user.height %></h4>
                     </div>
                 </div>
         
@@ -43,7 +43,7 @@
                     </div>
         
                     <div class="field">
-                        <input type="number" value="<%= user.weight %>" id="valid" disabled />
+                        <h4><%= user.weight %></h4>
                     </div>
                 </div>
         
@@ -53,7 +53,7 @@
                     </div>
         
                     <div class="field">
-                        <input type="number" value="<%= user.BMI %>" id="valid" disabled />
+                        <h4><%= user.BMI %></h4>
                     </div>
                 </div>
         
@@ -63,7 +63,7 @@
                     </div>
         
                     <div class="field">
-                        <input type="text" value="<%= user.currentWorkout.toUpperCase().replace(/_OR_/g, '/') %>" id="valid" disabled />
+                        <h4><%= user.currentWorkout.toUpperCase().replace(/_OR_/g, '/') %></h4>
                     </div>
                 </div>
         
