--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -82,7 +82,7 @@
                 </div>
 
                 <form class="section">
-                    <input type="text" placeholder="Send message to trainer..." required />
+                    <input type="text" placeholder="...Send message to trainer" required />
                     <button type="submit">send</button>
                 </form>
 
