--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -7,3 +7,12 @@
 
 <script src="/scripts/pageHandler.js" defer></script>
 <script src="/scripts/display_workout.js" defer></script>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SWQRDCQSVJ"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SWQRDCQSVJ');
+</script>
